<resources>
    <string name="app_name">Contacts</string>

    <string name="loading_contacts">Loading Contacts...</string>

    <string name="username">USERNAME</string>
    <string name="phone">PHONE</string>
    <string name="address">ADDRESS</string>
    <string name="website">WEBSITE</string>
    <string name="company">COMPANY</string>

    <string name="no_internet_connection">No internet connection</string>
    <string name="no_data">No data</string>

    <string name="menu_sort_a_z">Sort By A-Z</string>
    <string name="menu_sort_z_a">Sort By Z-A</string>

</resources>
